--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin:0 auto;
-    width:1100px;
+    width:1200px;
     background-color:#0e0d0d;
 }
 h1{
@@ -8,4 +8,45 @@ h1{
     background-color:#474747;
     color:#f8f8f8;
     text-align:center;
+}
+#h1Home{
+    margin-bottom:0;
+}
+#headerHome{
+    padding-bottom:30px;
+    color:#f8f8f8;
+}
+#headerPlanning{
+    margin-top:0;
+    color:#f8f8f8;
+    margin-bottom:40px;
+}
+.doos{
+    background-color:#474747;
+    width:49%;
+    height:15rem;
+    padding-bottom:30px;
+    border:0.5px solid grey;
+    display:inline-block;
+}
+img{
+    height:90%;
+    width:40%;
+    float:left;
+}
+#naamText{
+    color:black;
+    margin-top:10px;
+    font-size:34px;
+}
+a{
+    text-decoration:none;
+}
+.persoon{
+    margin-left:30px;
+}
+#gameInfo{
+    color:#f8f8f8;
+    margin-top:80px;
+    margin-left:90px;
 }
