kleine foutjes weg gehaald

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ img{
     float:left;
 }
 #naamText{
-    color:black;
+    color:rgb(184, 184, 184);
     margin-top:10px;
     font-size:34px;
 }
