--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h1{
     color:#f8f8f8;
     margin-bottom:40px;
 }
+#headerCreate{
+    margin-top:0;
+    color:#f8f8f8;
+    margin-bottom:40px;
+}
 .doos{
     background-color:#474747;
     width:49%;
@@ -49,4 +54,7 @@ a{
     color:#f8f8f8;
     margin-top:80px;
     margin-left:90px;
+}
+#name{
+    color:#f8f8f8;
 }
