--- a/style.css
+++ b/style.css
@@ -61,3 +61,30 @@ a{
 label{
     color:#f8f8f8;
 }
+.planningDoos{
+    background-color:#474747;
+    width:100%;
+    height:20rem;
+    margin-bottom:20px;
+    border:0.5px solid grey;
+    display:inline-block;
+}
+.planningText{
+    font-size:24px;
+    color:#f8f8f8;
+}
+#planningImg{
+    width:20%;
+}
+#planningButton{
+    background-color:rgb(15, 14, 14);
+    font-size:24px;
+    color:#f8f8f8;
+    text-decoration:none;
+    border:1px solid grey;
+    padding:10px;
+}
+.infoDiv{
+    width:100%;
+    
+}
