--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ label{
     padding:10px;
 }
 .infoDiv{
+    background-color:#474747;
     width:100%;
-    
+    height:20rem;
+    margin-bottom:20px;
+    border:0.5px solid grey;
+    display:inline-block;
 }
