--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1{
     border:0.5px solid grey;
     display:inline-block;
 }
-img{
+#indexImg{
     height:90%;
     width:40%;
     float:left;
@@ -74,6 +74,7 @@ label{
     color:#f8f8f8;
 }
 #planningImg{
+    float:left;
     width:20%;
 }
 #planningButton{
@@ -87,8 +88,13 @@ label{
 .infoDiv{
     background-color:#474747;
     width:100%;
-    height:20rem;
+    height:55rem;
     margin-bottom:20px;
     border:0.5px solid grey;
     display:inline-block;
+}
+#InfoImg{
+    float:left;
+    width:25%;
+    height:50%;
 }
